<resources>
    <string name="app_name">Save Life</string>
    <string name="login">Login</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="logout">Logout</string>
    <string name="others">Others</string>
    <string name="add_new_request">add new request</string>
    <string name="my_requests">My Requests</string>
    <string name="requests">Requests</string>
    <string name="home">Home</string>
    <string name="this_is_the_descripton_of_the_request">This is the descripton of the request</string>
</resources>
