<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/request"
            android:title="@string/requests" />
        <item
            android:id="@+id/nav_my_request"
            android:icon="@drawable/my_requests"
            android:title="@string/my_requests" />
        <item
            android:id="@+id/nav_add_req"
            android:icon="@drawable/add"
            android:title="@string/add_new_request" />


    </group>
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout" />
        </menu>
    </item>




</menu>
